--- a/css/gridStyle.css
+++ b/css/gridStyle.css
@@ -149,11 +149,12 @@ main, .grid, .gridItem, .imageContainer, .textContainer {
 		grid-auto-rows: calc(95vw + 7.5rem);  /** 95vw chosen to account for scrollbar **/
 	}
 	.gridItem {
-		background-color: #2c9c91;
+		background-color: #47baae;
 	}
 	.imageContainer {
 		height:95vw; /** 95vw chosen to account for scrollbar **/
 		width:100%;
+		border-bottom:1.5px solid #47baae;
 	}
 	.imageContainer img,.imageContainer video,.imageContainer audio {
 		max-width:100%;
