--- a/css/blogStyle.css
+++ b/css/blogStyle.css
@@ -49,7 +49,7 @@ main a {
 	text-decoration: none;
 }
 canvas {
-	box-sizing:content-box;
+	box-sizing:padding-box;
 	border:1px solid lightgray;
 	width:auto;
 	height:auto;
