--- a/css/contactStyle.css
+++ b/css/contactStyle.css
@@ -59,7 +59,7 @@ main a {
 .mailList form {
 	font-size:16px;
 	margin:auto 0;
-	margin-left:16px;
+	margin-left:20px;
 }
 .mailList fieldset {
 	padding:0;
@@ -69,12 +69,13 @@ main a {
 	height:22px;
 	margin:8px 0;
 	float:left;
+	clear:left;
 }
 .mailList label[for="sponsor"] {
 	float:none;
 }
 .mailList input {
-	margin:0.5rem 0;
+	margin:8px 0;
 }
 .mailList input[type="text"] {
 	float:right;
@@ -88,6 +89,7 @@ main a {
 	font-size: 16px;
 }
 .mapBox ul {
+	margin:0;
 	margin-left:1rem;
 	margin-top:0.5rem;
 	list-style-type: none;
@@ -191,6 +193,9 @@ main a {
 		margin-bottom:0.5rem;
 		float:left;
 		clear:left;
+	}
+	.mailList span {
+		margin-top:8px;
 	}
 	.mapBox {
 		height:calc(100% - 3.5rem);
