--- a/css/navbar.css
+++ b/css/navbar.css
@@ -88,6 +88,7 @@ footer {
 	color: white;
 	background-color:#16504a;
 	/** border-top: 2px solid #0f3531; **/
+	box-shadow:0px 1px #16504a;
 }
 footer div {
 	display:inline-block;
@@ -156,9 +157,9 @@ footer a {
 		display:block;
 		z-index:10;
 		top:0;
-		right: -320px;
+		left:100%;
 		height:100%;
-		transition: right 0.4s ease-out;
+		transition: transform 0.4s ease-out;
 		background-color:#2c9c91;
 	}
 	/** appearance of navigation li and links **/
@@ -232,14 +233,16 @@ footer a {
 	background-color:#2c9c91;
 	right: 0px;
 	/** top and transition in gallery is set inline **/
-	top: -350px;
-	transition: top 0.5s ease-out;
+	top:0;
+	transform: translateY(-100%);
+	transition: transform 0.5s ease-out;
 }
 #dropToc:hover {
 	background-color: #2c9c91;
 }
 #dropToc li a{
 	height: auto;
+	width:100%;
 	padding:10px 50px;
 }
 #dropToc li:hover:not(.buttonli) {
