--- a/css/blogStyle.css
+++ b/css/blogStyle.css
@@ -62,6 +62,7 @@ canvas {
 	vertical-align: top;
 	display:inline-block;
 	border:1px solid lightgray;
+	border-bottom:1px solid lightgray;
 }
 .center {
 	text-align:center;
