--- a/css/blogStyleAbout.css
+++ b/css/blogStyleAbout.css
@@ -1,6 +1,7 @@
 main sup {
 	font-size:0.6rem;
 }
+/** color scheme examples **/
 .colorScheme {
 	position: relative;
 	display:flex;
@@ -30,9 +31,7 @@ main sup {
 .colorScheme .minor {
 	width: 25px;
 }
-.lightSolution {
-	margin: 0;
-}
+/** headings and tables **/
 h4 {
 	margin:8px 0;
 }
@@ -47,6 +46,9 @@ th,td {
 .tableHeadings { 
 	background-color: lightgray; 
 }
+/** MEDIA QUERIES **/
+
+/** Tablets - colorSchemes **/
 @media only screen and (max-width: 800px)
 {
 	.colorScheme {
@@ -60,6 +62,7 @@ th,td {
 		margin-left: 0;
 	}
 }
+/** Phone & tablet - tables **/
 @media only screen and (max-width:550px)
 {
 	table {
@@ -69,6 +72,7 @@ th,td {
 		padding:0;
 	}
 }
+/** Phone - tables & colorSchemes **/
 @media only screen and (max-width: 450px)
 {
 	.colorScheme li {
